# dealforge-crm

./: LICENSE  alembic.ini  pytest.ini
backend/: .dockerignore  pyproject.toml
backend/scripts/seeds/: create_user.py
backend/src/backend/: config.py  main.py
backend/src/backend/application/: uow.py
backend/src/backend/application/auth/: errors.py
backend/src/backend/application/auth/dtos/: change_password.py  get_me.py  login_user.py  refresh_token.py  update_me.py
backend/src/backend/application/auth/use_cases/: change_password.py  get_me.py  login_user.py  refresh_token.py  update_me.py
backend/src/backend/application/dtos/auth/: login_user.py
backend/src/backend/application/funnel/: errors.py  repository.py
backend/src/backend/application/funnel/dtos/: create_funnel.py  create_funnel_stage.py  get_funnel.py  get_funnel_stage.py  list_funnel.py  move_funnel_stage.py  update_funnel.py  update_funnel_stage.py
backend/src/backend/application/funnel/services/: stage_ordering.py
backend/src/backend/application/repositories/: user_repo.py
backend/src/backend/application/shared/: errors.py
backend/src/backend/application/user/: errors.py  repository.py
backend/src/backend/domain/funnel/: entity.py
backend/src/backend/domain/lead/: entity.py
backend/src/backend/domain/shared/: errors.py  policy.py  specification.py
backend/src/backend/domain/user/: entity.py
backend/tests/unit/application/user/: fake_repository.py
backend/tests/unit/domain/funnel/: test_entity.py
backend/tests/unit/domain/user/: test_entity.py
migrations/: env.py
(+90 files in other folders)
