[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "oblachkoov",email = "vis.abdullaeva2008@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
test = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "ruff (>=0.15.7,<0.16.0)",
    "freezegun (>=1.5.5,<2.0.0)",
    "radon (>=6.0.1,<7.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]

